more details added for frisky foreplay games

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">Hot adult games for couples to make sex more fun.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -162,12 +162,12 @@
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000</h3> <p>of $10,000</p>
+                  <h3>$0</h3> <p>of $10,000</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-r">
-                <h3>10</h3> <p>days left</p>
+                <h3>30</h3> <p>days left</p>
                 </div>
               </div>
             </div>
@@ -204,36 +204,15 @@
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
-          </p>
+If you’re looking to add some spice to your love play, our Frisky Foreplay Games are just what you need to fire up your passion and desire for great sex. It’ll inspire you to play naughty and have a lot more fun with your partner.</p>
+In a committed, loving relationship, it may seem a little scary introducing new sex ideas into your bedroom. You may be a little shy asking for certain types of foreplay or sex that you feel your partner thinks is nasty, dirty or disgusting. Maybe you want to explore kinky sensations involving spanking, dirty talk, oral sex or even anal pleasuring but don’t know how to bring up the subject. Sexy bedroom games involving various types of foreplay ideas and playful sex tips is a perfect solution. When it’s part of the game, you’ll both be more willing to experiment and have fun together.</p>
         </div>
       </div>
 
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
-          </p>
+We have a variety of games designed as physical products (paper, cards, boards, dice, etc.) that could be effectively converted to electronic games running on modern mobile devices. <a href="http://www.friskyforeplay.com/">Frisky Foreplay</a> is one our best selling erotic dice game that would be amazing on an iPad or iPhone. Here is a sample of a vampire themed foreplay game we have prototyped using the Processing toolkit called <a href="http://www.friskyforeplay.com/Suck/">Suck!</a> - just click on the black rectangle to start (work in progress). We also have a number of relationship enhancement books on sale with Amazon currently making money so this is a viable market. Our <a href="http://www.going-down-getting-off.com/">Going Down Getting Off</a> game is also ripe for conversion to an electronic game format. The iOS market would be the first target then android.        </p>
         </div>
         <div class="span5 asset">
           <img class="img-polaroid" src="http://placehold.it/480x300">
@@ -282,11 +261,9 @@
       <!-- http://creativecommons.org/licenses/ -->
       <div class="row-fluid footer">
         <div class="span12">
-          <p>This work is licensed under
-            the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
-              By-SA 3.0
-            </a>, without all the cruft that would otherwise be
-            put at the bottom of the page.</p>
+          <p>See our main company website
+            <a href="http://succulententerprises.com/">Succulent Enterprises Inc.
+            </a> for more information.</p>
         </div>
       </div>
     </div>
